# emp_track

./: .env.example  README.md  pyproject.toml  setup.cfg
.github/workflows/: develop-push_workflow.yml  main-push_workflow.yml
infra/: .env.db  .env.prod  docker-compose.yaml
infra-dev/: .env.dev  docker-compose.yaml
src/backend/: Dockerfile  manage.py
src/backend/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
src/backend/apps/api/: filters.py  permissions.py  serializers_beta.py  urls.py  views.py
src/backend/apps/api/management/: logger.py
src/backend/apps/api/management/commands/: parse_resume.py  parse_users.py
src/backend/apps/api/serializers/: __init__.py  core.py  resume.py  tracker.py  user.py  vacancy.py
src/backend/apps/core/: admin.py  models.py
src/backend/apps/core/migrations/: 0001_initial.py
src/backend/apps/emptrack/: settings.py  urls.py  wsgi.py
src/backend/apps/resume/: admin.py  models.py
src/backend/apps/user/: admin.py
src/backend/apps/user/migrations/: 0001_initial.py
src/backend/apps/vacancy/: models.py
src/backend/apps/vacancy/migrations/: 0001_initial.py
src/backend/core/: admin.py  models.py
src/backend/emptrack/: asgi.py  settings.py  urls.py
src/backend/resume/: admin.py  forms.py  models.py  views.py
src/backend/resume/migrations/: 0001_initial.py
src/backend/scripts/: migrations.py
src/backend/services/: choices.py
src/backend/services/constants/: logger.py  models.py  parser.py
src/backend/templates/: base.html
src/backend/templates/includes/: footer.html  header.html
src/backend/templates/users/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
src/backend/templates/users/includes/: form_new_password.html
src/backend/tracker/: admin.py  models.py
src/backend/tracker/migrations/: 0001_initial.py
src/backend/user/: admin.py  forms.py  models.py  views.py
src/backend/vacancy/: admin.py  models.py
